--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -63,68 +63,68 @@
 
 <body>
     <h1>Privacy Policy</h1>
-    <p class="last-updated">Last Updated: January 15, 2026</p>
+    <p class="last-updated">Last Updated: January 16, 2026</p>
 
     <p>SermonMate ("we", "our", or "us") is committed to protecting your privacy. This Privacy Policy explains how we
         collect, use, and safeguard your information when you use our mobile application.</p>
 
     <h2>Information We Collect</h2>
 
-    <h3>Information You Provide</h3>
+    <h3>Information Stored Locally on Your Device</h3>
     <ul>
-        <li><strong>Account Information:</strong> Email address and display name when you create an account</li>
-        <li><strong>Chat Messages:</strong> Messages you send to our AI chat feature for the purpose of providing
-            personalized Bible guidance</li>
-        <li><strong>Preferences:</strong> Language, theme, and app settings</li>
+        <li><strong>App Preferences:</strong> Language, theme (dark/light mode), and settings</li>
+        <li><strong>Bookmarks:</strong> Saved Bible verses and stories</li>
+        <li><strong>Chat History:</strong> Your conversations with the AI chat feature</li>
+        <li><strong>Reading Progress:</strong> Stories you've read</li>
     </ul>
+    <p><em>This data is stored only on your device and is not transmitted to our servers.</em></p>
 
-    <h3>Automatically Collected Information</h3>
+    <h3>Information Collected Automatically</h3>
     <ul>
-        <li><strong>Device Information:</strong> Device type, operating system version</li>
-        <li><strong>Usage Data:</strong> App features used, stories read, time spent in app</li>
-        <li><strong>Purchase Information:</strong> Subscription status (processed through Apple/Google)</li>
+        <li><strong>Device Information:</strong> Device type, operating system version (for app compatibility)</li>
+        <li><strong>Subscription Status:</strong> Processed securely through Apple App Store or Google Play Store</li>
     </ul>
 
     <h2>How We Use Your Information</h2>
     <ul>
-        <li>Provide and improve our Bible study features</li>
-        <li>Power AI-driven chat responses with personalized guidance</li>
-        <li>Process subscription payments through App Store/Google Play</li>
-        <li>Send important app updates (with your consent)</li>
-        <li>Analyze usage patterns to improve the app</li>
+        <li>Provide Bible study features and personalized content</li>
+        <li>Power AI-driven chat responses for spiritual guidance</li>
+        <li>Process subscriptions through App Store/Google Play</li>
+        <li>Improve app performance and user experience</li>
     </ul>
 
     <h2>AI-Powered Features</h2>
     <p>SermonMate uses artificial intelligence (AI) to provide personalized Bible chat responses. Your chat messages are
-        processed by our AI systems to generate relevant scripture-based guidance. We do not use your messages for
-        advertising purposes.</p>
+        processed to generate relevant scripture-based guidance. Chat history is stored locally on your device only.</p>
+
+    <h2>Subscriptions</h2>
+    <p>Subscriptions are processed entirely through Apple App Store or Google Play Store. We do not collect or store
+        your payment information directly. All payment data is handled securely by Apple or Google.</p>
 
     <h2>Data Storage and Security</h2>
     <ul>
-        <li>Your data is stored securely using industry-standard encryption</li>
-        <li>Bookmarks and preferences are stored locally on your device</li>
-        <li>We retain chat history only as long as necessary to provide the service</li>
+        <li>All personal data (bookmarks, preferences, chat history) is stored locally on your device</li>
+        <li>We do not maintain user accounts or login systems</li>
+        <li>Deleting the app removes all locally stored data</li>
     </ul>
 
     <h2>Third-Party Services</h2>
     <p>We use the following third-party services:</p>
     <ul>
-        <li><strong>RevenueCat:</strong> Subscription management</li>
-        <li><strong>Google/OpenAI:</strong> AI chat processing</li>
-        <li><strong>Apple App Store / Google Play:</strong> Payment processing</li>
+        <li><strong>RevenueCat:</strong> Subscription management (no personal data shared)</li>
+        <li><strong>Google AI:</strong> Powers the AI chat feature</li>
+        <li><strong>Apple/Google:</strong> Subscription payment processing</li>
     </ul>
 
     <h2>Your Rights</h2>
     <ul>
-        <li><strong>Access:</strong> Request a copy of your data</li>
-        <li><strong>Deletion:</strong> Delete your account and data from within the app</li>
-        <li><strong>Correction:</strong> Update your account information</li>
-        <li><strong>Opt-out:</strong> Disable non-essential data collection in settings</li>
+        <li><strong>Data Control:</strong> All your data is on your device - you control it</li>
+        <li><strong>Deletion:</strong> Uninstall the app to delete all data</li>
+        <li><strong>No Account:</strong> No account creation required to use the app</li>
     </ul>
 
     <h2>Children's Privacy</h2>
-    <p>SermonMate is suitable for all ages. We do not knowingly collect personal information from children under 13
-        without parental consent.</p>
+    <p>SermonMate is suitable for all ages. We do not collect personal information from users of any age.</p>
 
     <h2>Changes to This Policy</h2>
     <p>We may update this Privacy Policy from time to time. We will notify you of any changes by updating the "Last
