--- a/terms-of-service.html
+++ b/terms-of-service.html
@@ -101,12 +101,12 @@
         <li><strong>Refunds:</strong> Contact Apple/Google for refund requests</li>
     </ul>
 
-    <h2>4. User Accounts</h2>
+    <h2>4. Data and Storage</h2>
     <ul>
-        <li>You may create an account using your email address</li>
-        <li>You are responsible for maintaining account security</li>
-        <li>You may delete your account at any time from within the app</li>
-        <li>We may suspend accounts that violate these terms</li>
+        <li>SermonMate does not require account creation or login</li>
+        <li>All app data (bookmarks, preferences, chat history) is stored locally on your device</li>
+        <li>Uninstalling the app will delete all locally stored data</li>
+        <li>Subscription status is managed through Apple/Google</li>
     </ul>
 
     <h2>5. AI Chat Guidelines</h2>
@@ -125,7 +125,7 @@
         <li>Attempt to manipulate or misuse the AI system</li>
         <li>Share offensive, harmful, or inappropriate content</li>
         <li>Reverse engineer or copy the app's functionality</li>
-        <li>Create multiple accounts to abuse free trials</li>
+        <li>Abuse free trial by reinstalling the app</li>
     </ul>
 
     <h2>7. Intellectual Property</h2>
@@ -155,9 +155,9 @@
     <p>These Terms are governed by the laws of the jurisdiction in which you reside, without regard to conflict of law
         principles.</p>
 
-    <h2>12. Account Deletion</h2>
-    <p>You may delete your account and associated data at any time by going to Settings > Account > Delete Account
-        within the app.</p>
+    <h2>12. Data Deletion</h2>
+    <p>To delete all your app data, simply uninstall SermonMate from your device. All locally stored data including
+        preferences, bookmarks, and chat history will be permanently removed.</p>
 
     <div class="contact">
         <h2>Contact Us</h2>
